# btleplugex

./: Cargo.toml  README.md  logging_config.yaml
kotlin-app/: build.gradle  settings.gradle
kotlin-app/app/: build.gradle
kotlin-app/app/libs/: droidplug-debug.aar
kotlin-app/app/src/main/: AndroidManifest.xml
kotlin-app/app/src/main/java/com/example/btleplugex/: MainActivity.kt  btleplug.kt
kotlin-app/app/src/main/res/layout/: layout.xml
kotlin-app/app/src/main/res/values/: strings.xml  themes.xml
kotlin-app/gradle/wrapper/: gradle-wrapper.properties
src/: connect_disconnect.rs  discover_adapters_peripherals.rs  discover_services_characteristics.rs  event_driven_discovery.rs  lib.rs  main.rs  start_stop.rs  subscribe_notifications.rs  subscribe_notify_characteristic.rs
src/abi/: jni_system.rs  mod.rs
src/builder/: jni.rs  mod.rs  thread.rs
