[package]
name = "btleplugex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10.5", features = ["serde"] }
futures = "0.3.28"
lazy_static = "1.0"
log = "*"
log4rs = "1"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "sync", "macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
uuid = "1.3.1"

[lib]
name = "btleplugex"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"
jni = { version = "0.19.0", default-features = false}
jni-utils = "0.1.0"
once_cell = "1.17.1"
